update spigot and mcore